<resources>
    <string name="app_name">TexasHoldem</string>
    <string name="play">Play</string>
    <string name="help">Help</string>
    <string name="texas_holdem">No-limit Texas Hold\'em</string>
    <string name="fold">fold</string>
    <string name="call">Call</string>
    <string name="raise">Raise</string>
    <string name="round">Round</string>
    <string name="you">You:</string>
    <string name="computer">Computer:</string>
    <string name="raise_">Raise:</string>
    <string name="setting">Setting</string>
    <string name="minus2">-$200</string>
    <string name="minus1">-$100</string>
    <string name="add1">+$100</string>
    <string name="add2">+$200</string>
    <string name="logs">Logs</string>
    <string name="setting_activity">Setting</string>
    <string name="logs_activity">Logs</string>
    <string name="auto_sync_setting_activity">Auto Sync Setting</string>
    <string name="aiplayer_setting_activity">AIPlayer Setting</string>
    <string name="ai_player_setting">AI Player</string>
    <string name="auto_sync_setting">Auto Sync</string>
    <string name="ai_player_random">Random AI Player</string>
    <string name="ai_player_minimax">Minimax AI Player</string>
    <string name="ai_player_machine_learning">Machine Learning AI Player</string>
    <string name="log_detail">Log Detail</string>
    <string name="sync">Synchronize</string>
    <string name="min_bet">min bet</string>
    <string-array name="ai_player_array">
        <item>@string/ai_player_random</item>
        <item>@string/ai_player_minimax</item>
        <item>@string/ai_player_machine_learning</item>
    </string-array>

</resources>
