<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <!--<android.support.v7.widget.RecyclerView-->
    <!--android:id="@+id/recycler_view"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:padding="8dp">-->

    <!--</android.support.v7.widget.RecyclerView>-->

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|start"
        android:padding="8dp"
        android:textColor="#000"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#999"
        android:gravity="center|start"
        android:padding="8dp"
        android:text="@string/log_detail"
        android:textColor="#fff"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/log_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:padding="8dp"
        android:text="@string/ai_player_setting"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_title" />

    <Button
        android:id="@+id/sync_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_detail" />

</android.support.constraint.ConstraintLayout>